main: Add calendar screenshots, fix overflow-x mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,7 @@
 html {
   @apply md:snap-mandatory md:snap-y;
 }
+
+@theme {
+  --breakpoint-xs: 384px;
+}
